@@ -4,6 +4,11 @@ CHANGE LOG
 
 Changes up to 0.99
 
+    beta31
+
+    * fixed surface object show and hide menus
+
+    * fixed gadget picking/dragging broken in beta30
     
     beta30
 
